<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#0000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_margin"
        android:background="@drawable/dialog"
        android:divider="@color/border"
        android:orientation="vertical"
        android:showDividers="middle">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:text="@string/share_title" />

        <TextView
            android:id="@id/share"
            style="@style/dialog_item"
            android:paddingBottom="@dimen/dialog_item_padding"
            android:text="@string/share" />

        <TextView
            android:id="@+id/cancel"
            style="@style/dialog_item"
            android:paddingBottom="10dp"
            android:text="@string/cancel" />

    </LinearLayout>
</FrameLayout>