<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#0000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/error_dialog_margin"
        android:layout_marginRight="@dimen/error_dialog_margin"
        android:background="@drawable/dialog"
        android:divider="@color/border"
        android:orientation="vertical"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/network_error_title"
                android:textSize="@dimen/large_text_size" />

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/network_error_message" />

        </LinearLayout>

        <TextView
            android:id="@+id/ok"
            style="@style/dialog_item"
            android:paddingBottom="10dp"
            android:text="@string/network_error_ok" />

    </LinearLayout>
</FrameLayout>